# Designops-Agent

./: .env.example  .gitignore  README.md  demo_notebook.ipynb  pyproject.toml  run_agent.py
briefs/: brief_mixed_use.json  brief_residential.json
src/: __init__.py  agent.py  config.py  retry.py  state.py
src/llm/: __init__.py  client.py  factory.py  noop_client.py  ollama_client.py
src/nodes/: __init__.py  constraint_check.py  doc_writer.py  geometry_gen.py  planner.py  prompts.py  risk_assessor.py
src/store/: __init__.py  sqlite_store.py
src/tools/: __init__.py  constraint_tool.py  documentation_tool.py  geometry_tool.py
tests/: _fake_llm.py  conftest.py  test_geometry_gen_llm.py  test_llm_config.py  test_ollama_client.py  test_planner.py  test_planner_llm.py  test_retry.py  test_risk_assessor_llm.py  test_tools.py
