[project]
name = "designops-agent"
version = "1.0.0"
description = "LangGraph-based DesignOps agent for brief planning, geometry generation, and constraint-aware documentation."
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "sqlite-utils>=3.36",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
run-agent = "run_agent:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
